--- a/config.toml
+++ b/config.toml
@@ -1,16 +1,22 @@
-baseURL = 'https://filipecarneiro.github.io/hugo-bootstrap-theme/'
-title = "Hugo Bootstrap Theme"
-author = "Filipe Carneiro"
-copyright = "Open-source <a class=\"text-muted text-decoration-none\" href=\"https://github.com/filipecarneiro/hugo-bootstrap-theme/blob/main/LICENSE\">MIT</a> Licensed."
+baseURL = 'https://guifeitosabr.github.io/s24-team-09-landing-page/'
+title = "FocusTabs"
+author = "Guilherme Feitosa"
+copyright = "Website built by Guilherme Feitosa."
 
-timeZone = 'Europe/London'
+relativeURLs = true
+
+# baseURL = 'https://filipecarneiro.github.io/hugo-bootstrap-theme/'
+# title = "FocusTabs"
+# author = "Anirudh Bharadwaj, Eshan Singhal, Guilherme Feitosa, and Kofi Addae-Sakyi"
+# opyright = "Open-source <a class=\"text-muted text-decoration-none\" href=\"https://github.com/filipecarneiro/hugo-bootstrap-theme/blob/main/LICENSE\">MIT</a> Licensed."
+
+timeZone = 'America/New_York'
 
 # Multilingual
 defaultContentLanguage = "en"
 defaultContentLanguageInSubdir = false
 
 theme = "hugo-bootstrap-theme"
-themesdir = "../.."
 
 disableHugoGeneratorInject = true
 enableRobotsTXT = true
