Update baseURL to custom domain

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://guifeitosabr.github.io/s24-team-09-landing-page/'
+baseURL = "https://focus-tabs.com/"
 title = "FocusTabs"
 author = "Guilherme Feitosa"
 copyright = "Website built by Guilherme Feitosa."
